--- a/style.css
+++ b/style.css
@@ -106,6 +106,11 @@ clear:right;
 .videoPlay table{
 width:30%;
 }
+.commentList{
+position:relative;
+width:60%;
+z-index: -1;
+}
 /*signin.php*/
 .signin{
 		        text-align:center;
