--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ width:35%;
 position: relative;
 float: left;
 height: 150px;
-width: 25%;
+width: 300px;
 background-color: #CC66FF;
 padding: 3px;
 margin: 3%;
@@ -80,6 +80,7 @@ visibility: hidden;
 .videoPlay {
 position:relative;
 width:60%;
+float:left;
 }
 .videoPlay *{
 //width:60%;
@@ -121,6 +122,7 @@ width:30%;
 .commentDiv{
 position:relative;
 width:60%;
+float:left;
 //z-index: -1;
 }
 .comment{
