--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ height: 150px;
 width: 300px;
 background-color: #CC66FF;
 padding: 3px;
-margin: 3%;
+margin: 10px;
 border: solid 3px #A7A7A8;
 border-radius: 10px;
 }
