--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .topbar{
 position:fixed;
-background-color:#F1FF3F;
+background-color:rgba(90, 201, 241, 0.83);
 top:0;
 left:0;
 right:0;
@@ -33,7 +33,7 @@ position: relative;
 float: left;
 height: 150px;
 width: 300px;
-background-color: #CC66FF;
+background-color:rgba(102, 255, 249, 0.75); 
 padding: 3px;
 margin: 10px;
 border: solid 3px #A7A7A8;
@@ -50,7 +50,7 @@ width:550px;
 	  background-color:#CC66FF;
 }*/
 .videoList:hover{
-background-color:#EFEFB6;
+background-color:rgba(176, 204, 209, 0.68);
 transition:1s;
 box-shadow: 0 3px 5px rgba(253, 25, 25, 0.4);
 }
@@ -162,4 +162,38 @@ padding:3px;
 img.icon{
 		width: 1em;
 		height: 1em;
+}
+input{
+		border-radius: 5px;
+		margin:5px;
+
+}
+select{
+		display: inline-block;
+		padding: 4px 6px;
+		margin-bottom: 10px;
+		line-height: 20px;
+		color: #555;
+		vertical-align: middle;
+		border-radius: 5px;
+}
+.btn_my {
+		display: inline-block;
+		margin-bottom: 0;
+		font-size: 14px;
+		line-height: 20px;
+		color: #333;
+		text-align: center;
+		text-shadow: 0 1px 1px rgba(255,255,255,.75);
+		vertical-align: middle;
+		cursor: pointer;
+		background-color: #f5f5f5;
+		background-image: linear-gradient(to bottom,#fff,#e6e6e6);
+		background-repeat: repeat-x;
+		border: 1px solid #ccc;
+		border-color: #e6e6e6 #e6e6e6 #bfbfbf;
+		border-color: rgba(0,0,0,.1) rgba(0,0,0,.1) rgba(0,0,0,.25);
+		border-bottom-color: #b3b3b3;
+		border-radius: 4px;
+		box-shadow: inset 0 1px 0 rgba(255,255,255,.2),0 1px 2px rgba(0,0,0,.05);
 }
