--- a/style.css
+++ b/style.css
@@ -197,3 +197,6 @@ select{
 		border-radius: 4px;
 		box-shadow: inset 0 1px 0 rgba(255,255,255,.2),0 1px 2px rgba(0,0,0,.05);
 }
+.center{
+		text-align:center;
+}
